@@ -3,7 +3,6 @@ swaggerSources {
   server {
     inputFile = file(tasks.getByPath(':openapi:buildOpenApi').openApiSource)
     code {
-      jvmArgs = ['--add-opens=java.base/java.util=ALL-UNNAMED'] // for Java 16+
       language = "spring"
       library = "spring-boot"
       outputDir = file(openapiOutputDir)
@@ -15,6 +14,7 @@ swaggerSources {
               "--additional-properties", "errorOnUnknownEnum=true",
               "-D", "interfaceOnly=true," +
                       "useTags=true," +
+                      "jakarta=true," +
                       "dateLibrary=java8"
       ]
     }
